[gd_scene load_steps=17 format=3 uid="uid://due0m87pa8nlk"]

[ext_resource type="Script" path="res://Player/Attack/boulder.gd" id="1_iveb8"]
[ext_resource type="Texture2D" uid="uid://51bqoeqabasd" path="res://Assets/Weapons/MOSH_Boulder-Break-Sheet.png" id="2_7hug2"]
[ext_resource type="Texture2D" uid="uid://dhqmb1a7ojbsa" path="res://Assets/Weapons/MOSH_Boulder.png" id="3_isg6h"]
[ext_resource type="AudioStream" uid="uid://bed52gxfpctjj" path="res://Audio/fireball_throw.mp3" id="4_vq3x8"]
[ext_resource type="AudioStream" uid="uid://7q1dyjmba1fs" path="res://Audio/fireball_explosion.mp3" id="5_lt0nn"]
[ext_resource type="Script" path="res://Player/Attack/splash.gd" id="6_5gh6q"]

[sub_resource type="AtlasTexture" id="AtlasTexture_sx54v"]
atlas = ExtResource("2_7hug2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjrpw"]
atlas = ExtResource("2_7hug2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_werex"]
atlas = ExtResource("2_7hug2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3etf"]
atlas = ExtResource("2_7hug2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0ohy"]
atlas = ExtResource("3_isg6h")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_pgi1l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sx54v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjrpw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_werex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3etf")
}],
"loop": false,
"name": &"explosion",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0ohy")
}],
"loop": true,
"name": &"fire",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dexmn"]
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_tvx5k"]
radius = 40.0

[sub_resource type="Curve" id="Curve_p83hh"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.252747), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_xabym"]
min_value = -1.0
_data = [Vector2(0, -0.912088), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Boulder" type="Area2D" groups=["attack"]]
top_level = true
collision_layer = 4
collision_mask = 0
script = ExtResource("1_iveb8")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_pgi1l")
animation = &"fire"
autoplay = "fire"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7.10543e-15, -3.55271e-15)
shape = SubResource("CapsuleShape2D_dexmn")

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[node name="snd_throw" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_vq3x8")
volume_db = -30.0
pitch_scale = 2.0
autoplay = true

[node name="snd_explode" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_lt0nn")
volume_db = -30.0

[node name="SplashArea" type="Area2D" parent="." groups=["attack"]]
collision_layer = 4
collision_mask = 0
script = ExtResource("6_5gh6q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SplashArea"]
shape = SubResource("CircleShape2D_tvx5k")
disabled = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 64
lifetime = 0.3
explosiveness = 1.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 200.0
scale_amount_min = 2.0
scale_amount_max = 3.0
scale_amount_curve = SubResource("Curve_p83hh")
color = Color(0.560784, 0.337255, 0.231373, 1)
hue_variation_min = -0.23
hue_variation_max = 0.11
hue_variation_curve = SubResource("Curve_xabym")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="finished" from="snd_explode" to="." method="_on_snd_explode_finished"]
[connection signal="body_entered" from="SplashArea" to="." method="_on_splash_area_body_entered"]
[connection signal="body_exited" from="SplashArea" to="." method="_on_splash_area_body_exited"]
